# B2MBlockchain

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blockchain.proto
include/: blockchain.hpp
include/proto/: blockchain.pb.cc  blockchain.pb.h
src/: CMakeLists.txt  block.cpp  blockchain.cpp  blockchain.h  blockchain.hpp  emitter.cpp  main.cpp  main.py  merkle_tree.cpp  miner.cpp  transaction.cpp  web.cpp
src/b-core/: blockchain.cpp  transaction.cpp
src/b-nodes/: miner.cpp
